# nxp-custom-lpc54xxx

./: CMakeLists.txt  LPC54608J512_flash.ld  README.md
Core/Inc/: FreeRTOSConfig.h  MyClass.h  hello_world_float.h  hello_world_int8.h  lv_conf.h
Core/Src/: hello_world_float.cpp  hello_world_int8.cpp  lv_port_disp.c  lv_port_indev.c  main.c  syscalls.c  tflm_hello_world.cpp
Drivers/board/Inc/: board.h  pin_mux.h
Drivers/board/Src/: board.c  pin_mux.c
Drivers/components/Inc/: ft5406.h  mma8652fc.h
Drivers/components/Src/: ft5406.c  mma8652fc.c
Middlewares/tensorflow/tensorflow/lite/micro/cortex_m_generic/: micro_time.cc
Middlewares/tensorflow/tensorflow/lite/micro/kernels/cmsis_nn/: add.cc  batch_matmul.cc  conv.cc  depthwise_conv.cc  fully_connected.cc  mul.cc  pooling.cc  softmax.cc  svdf.cc  transpose_conv.cc  unidirectional_sequence_lstm.cc
